--- a/analyze_success.ipynb
+++ b/analyze_success.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9088dbae-e99b-4684-816d-34c7fd730244",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "11caf9d0-aa0a-4a21-994c-31089e1a7535",
    "metadata": {},
    "outputs": [
@@ -50,14 +50,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11699/11699 [04:06<00:00, 47.55it/s] "
+      "  0%|          | 0/619 [00:00<?, ?it/s]/ext3/miniforge3/lib/python3.12/site-packages/torch/storage.py:414: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  return torch.load(io.BytesIO(b))\n",
+      "100%|██████████| 619/619 [00:02<00:00, 229.63it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no judge scores:  {'llama3-70b', 'llama3.1-70b', 'gemma2-9b', 'qwen2.5-32b', 'gemma2-27b'}\n"
+      "no refusal scores:  6252\n"
      ]
     },
     {
@@ -74,9 +76,11 @@
     "               \"original_prompt_text\",\n",
     "               \"jailbroken_original_finetuned_judge\",\n",
     "               \"jailbroken_jailbreak_finetuned_judge\",\n",
+    "               #\"refusal_score\",\n",
     "               \"jailbroken_rule_judge\"]\n",
+    "no_refusal_score_count = 0\n",
     "no_judge_scores = set()\n",
-    "for fname in tqdm(glob.glob(f\"{RESPONSES_DIR}/*.pkl\")):\n",
+    "for fname in tqdm(glob.glob(f\"{RESPONSES_DIR}/llama3-8b*.pkl\")):\n",
     "    with open(fname, \"rb\") as f:\n",
     "        data = pickle.load(f)\n",
     "\n",
@@ -97,6 +101,9 @@
     "            continue\n",
     "\n",
     "        assert model_name not in no_judge_scores\n",
+    "\n",
+    "        if \"refusal_score\" not in _v.keys():\n",
+    "            no_refusal_score_count += 1\n",
     "        \n",
     "        joint_data_dict[\"model_name\"].append(model_name)\n",
     "        for field, value in _v.items():\n",
@@ -109,17 +116,16 @@
     "            else:\n",
     "                joint_data_dict[field].append(value)\n",
     "\n",
-    "print(\"no judge scores: \", no_judge_scores)"
+    "#print(\"no judge scores: \", no_judge_scores)\n",
+    "print(\"no refusal scores: \", no_refusal_score_count)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7b47bd50-3f13-409c-831e-41948177e0b1",
+   "cell_type": "markdown",
+   "id": "5190bd4c-323e-481a-b04d-477f2081e1c0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.DataFrame.from_dict(joint_data_dict)"
+    "###### df = pd.DataFrame.from_dict(joint_data_dict)"
    ]
   },
   {
