--- a/analyze_success.ipynb
+++ b/analyze_success.ipynb
@@ -52,14 +52,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11761/11761 [03:50<00:00, 51.12it/s]"
+      "100%|██████████| 11761/11761 [03:32<00:00, 55.43it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no judge scores:  {'gemma-7b'}\n"
+      "no judge scores:  set()\n"
      ]
     },
     {
