--- a/analyze_responses_llama3-8b.ipynb
+++ b/analyze_responses_llama3-8b.ipynb
@@ -1889,7 +1889,9 @@
    "cell_type": "code",
    "execution_count": 83,
    "id": "cf1ebfa7-3398-44e3-8ad6-d853c53f387d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
